--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	 <img src=
+"C:\Users\TRUPTI\OneDrive\Desktop\SE\RAnimal.jpg" 
+         alt="GFG image" /> 
+
 </body>
 
 </html>
