--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
 	 <img src=
 "C:\Users\TRUPTI\OneDrive\Desktop\SE\RAnimal.jpg" 
-         alt="GFG image" /> 
+         alt="GFG image" alt="favorite animal" width="200" height="200"/> 
 
 </body>
 
