--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 	 <img src=
-"C:\Users\TRUPTI\OneDrive\Desktop\SE\RAnimal.jpg" 
+"RAnimal.jpg" 
          alt="GFG image" alt="favorite animal" width="200" height="200" border="5" title="Animal" /> 
 
 </body>
